--- a/private_dot_gnupg/private_gpg-agent.conf.tmpl
+++ b/private_dot_gnupg/private_gpg-agent.conf.tmpl
@@ -6,5 +6,5 @@ pinentry-program /opt/homebrew/bin/pinentry-mac
 {{ else if eq .chezmoi.username "prncss" }}
 pinentry-program /usr/bin/pinentry-gnome3
 {{ else }}
-pinentry-program /opt/homebrew/bin/pinentry-tty
+pinentry-program /usr/bin/pinentry-tty
 {{- end }}
