--- a/sysfiles/etc/dracut.conf.d/host.conf.tmpl
+++ b/sysfiles/etc/dracut.conf.d/host.conf.tmpl
@@ -1,3 +1,4 @@
+{{- if eq .chezmoi.os "linux" -}}
 hostonly=yes
 compress=lz4
 uefi=yes
@@ -14,3 +15,4 @@ CMDLINE=(
 )
 kernel_cmdline="${CMDLINE[*]}"
 unset CMDLINE
+{{- end }}
