--- a/dot_config/fish/conf.d/private_void.fish.tmpl
+++ b/dot_config/fish/conf.d/private_void.fish.tmpl
@@ -4,6 +4,7 @@ set -x LC_CTYPE "C.UTF-8"
 set -x GRIM_DEFAULT_DIR $HOME/Media/Pictures/Captures
 set -x PERSONAL $HOME/Personal
 
-abbr d ddgr
-abbr dw BROWSER=w3m ddgr
+abbr pi sudo xbps-install -y
+abbr pr sudo xbps-remove -Ry
+abbr pu sudo xbps-install -Syu
 {{- end }}
